--- a/Strat1/.gitignore
+++ b/Strat1/.gitignore
@@ -9,6 +9,11 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+/[Aa]ssets/Body Proportions/
+/[Aa]ssets/Character Boom/
+/[Aa]ssets/Fantazia Animated 2D monsters/
+/[Aa]ssets/[Pp]lugins/
+/.DS_Store
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
