--- a/Strat1/Packages/manifest.json
+++ b/Strat1/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.2d.spriteshape": "9.0.2",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.collab-proxy": "2.2.0",
+    "com.unity.feature.2d": "2.0.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.27",
     "com.unity.ide.vscode": "1.2.5",
