--- a/Strat1/.gitignore
+++ b/Strat1/.gitignore
@@ -13,6 +13,7 @@
 /[Aa]ssets/Character Boom/
 /[Aa]ssets/Fantazia Animated 2D monsters/
 /[Aa]ssets/[Pp]lugins/
+/[Aa]ssets/[Tt]ext[Mm]esh [Pp]ro/
 /.DS_Store
 
 # MemoryCaptures can get excessive in size.
